More documentation and cleaning up.

--- a/tinytroupe/config.ini
+++ b/tinytroupe/config.ini
@@ -25,7 +25,7 @@ FREQ_PENALTY=0.0
 PRESENCE_PENALTY=0.0
 TIMEOUT=60
 MAX_ATTEMPTS=5
-WAITING_TIME=2
+WAITING_TIME=1
 EXPONENTIAL_BACKOFF_FACTOR=5
 
 EMBEDDING_MODEL=text-embedding-3-small 
@@ -41,7 +41,7 @@ RAI_COPYRIGHT_INFRINGEMENT_PREVENTION=True
 
 
 [Logging]
-LOGLEVEL=INFO
+LOGLEVEL=ERROR
 # ERROR
 # WARNING
 # INFO
