Improves varied details.

--- a/data/extractions/appartment_rent_ad.extraction.json
+++ b/data/extractions/appartment_rent_ad.extraction.json
@@ -2,7 +2,7 @@
     "agent_extractions": {},
     "world_extraction": {
         "Focus group": {
-            "ad_copy": "Discover the perfect blend of modern living and convenience in this beautifully renovated apartment. Located in a quiet spot on a main avenue, this spacious one-bedroom home features an elegant integrated kitchen and living room, complete with stylish 60s-style chairs and high-end appliances. Enjoy the luxury of two tastefully designed bathrooms and a versatile home office space. With wood-like floors and a new washer-dryer, this fully furnished apartment is ready for you to move in. Just steps away from public transport, shops, and restaurants, and near the country's top Medicine School, it's an ideal choice for students and professionals alike. Experience the tranquility and charm of this unique living space with high-quality photos and a virtual tour. Don't miss out on this opportunity to make it your new home!"
+            "ad_copy": "Spacious, Modern Living in a Quiet, Convenient Location! Discover this beautifully renovated apartment with an open design, perfect for students and young professionals. Enjoy the convenience of nearby amenities like supermarkets, gyms, and public transport, while relishing the tranquility of a quiet setting. Ideal for remote work with a home office space, and fully furnished with modern appliances. Don't miss out on this opportunity\u2014contact us today for a virtual tour and special incentives for early renters!"
         }
     }
 }
