Improves various details.

--- a/data/extractions/appartment_rent_ad.extraction.json
+++ b/data/extractions/appartment_rent_ad.extraction.json
@@ -2,7 +2,7 @@
     "agent_extractions": {},
     "world_extraction": {
         "Focus group": {
-            "ad_copy": "Spacious, Modern Living in a Quiet, Convenient Location! Discover this beautifully renovated apartment with an open design, perfect for students and young professionals. Enjoy the convenience of nearby amenities like supermarkets, gyms, and public transport, while relishing the tranquility of a quiet setting. Ideal for remote work with a home office space, and fully furnished with modern appliances. Don't miss out on this opportunity\u2014contact us today for a virtual tour and special incentives for early renters!"
+            "ad_copy": "Modern, Spacious, and Quiet Living Near Top Medicine School. Highlighting the modern renovation, spacious design, and proximity to amenities and the Medicine School, this furnished apartment offers convenience for tenants looking to move in quickly. Enjoy the quietness despite its central location, making it ideal for students or professionals. High-quality photos and a virtual tour available to showcase its best features."
         }
     }
 }
