Changes install instructions, as previous one was causing issues.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
-include tinytroupe\config.ini
-recursive-include tinytroupe *.py
-recursive-include tinytroupe *.md *.mustache
+# Include all .json, .ini, .mustache, and .md files in the base package folder
+recursive-include tinytroupe *.json *.ini *.mustache *.md
+
+# Include everything under the prompts folder
+recursive-include tinytroupe/prompts *
