Changes default model to GPT-4o-mini, adds market research example, plus many other small tweaks.

--- a/data/extractions/appartment_rent_ad.extraction.json
+++ b/data/extractions/appartment_rent_ad.extraction.json
@@ -2,7 +2,7 @@
     "agent_extractions": {},
     "world_extraction": {
         "Focus group": {
-            "ad_copy": "Modern, Spacious, and Quiet Living Near Top Medicine School. Highlighting the modern renovation, spacious design, and proximity to amenities and the Medicine School, this furnished apartment offers convenience for tenants looking to move in quickly. Enjoy the quietness despite its central location, making it ideal for students or professionals. High-quality photos and a virtual tour available to showcase its best features."
+            "ad_copy": "Don't miss out on this unique opportunity! Contact Paulo today to schedule a viewing of this spacious, modern apartment featuring elegant renovations, a quiet location despite being on a main avenue, and all the furnishings you need to move in quickly. Enjoy the convenience of nearby supermarkets, restaurants, and public transport, all while being close to the best Medicine School in the country. This apartment is perfect for students and anyone looking for a comfortable home!"
         }
     }
 }
