--- a/examples/config.ini
+++ b/examples/config.ini
@@ -14,14 +14,14 @@ AZURE_API_VERSION=2023-05-15
 # Model parameters
 #
 
-MODEL=gpt-4o
+MODEL=gpt-4o-mini
 MAX_TOKENS=4000
-TEMPERATURE=0.3
-FREQ_PENALTY=0.0
+TEMPERATURE=1.5
+FREQ_PENALTY=0.3
 PRESENCE_PENALTY=0.0
 TIMEOUT=60
 MAX_ATTEMPTS=5
-WAITING_TIME=1
+WAITING_TIME=2
 EXPONENTIAL_BACKOFF_FACTOR=5
 
 EMBEDDING_MODEL=text-embedding-3-small 
