--- a/tinytroupe/config.ini
+++ b/tinytroupe/config.ini
@@ -14,9 +14,9 @@ AZURE_API_VERSION=2023-05-15
 # Model parameters
 #
 
-MODEL=gpt-4o
+MODEL=gpt-4o-mini
 MAX_TOKENS=4000
-TEMPERATURE=0.3
+TEMPERATURE=1.5
 FREQ_PENALTY=0.0
 PRESENCE_PENALTY=0.0
 TIMEOUT=60
