modify for ollama client

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -4,7 +4,7 @@
 #
 
 # Default options: openai, azure
-API_TYPE=openai
+API_TYPE=ollama
 
 # Check Azure's documentation for updates here:
 # https://learn.microsoft.com/en-us/azure/ai-services/openai/chatgpt-quickstart?tabs=command-line&pivots=programming-language-python
