--- a/tinytroupe/config.ini
+++ b/tinytroupe/config.ini
@@ -42,3 +42,11 @@ LOGLEVEL=ERROR
 # WARNING
 # INFO
 # DEBUG
+
+# Ollama Service Setup
+[Ollama]
+base_url = http://100.121.219.121:11434/api/chat
+model = qwen2.5:14b
+temperature = 0.3
+top_p = 0.95
+timeout = 120
