for ollama modified

--- a/jiucai/config.ini
+++ b/jiucai/config.ini
@@ -46,12 +46,21 @@ LOGLEVEL=INFO
 # Ollama Service Setup
 [Ollama]
 url = http://100.103.46.96:11434
+#base_url = http://localhost:11434/api/chat
 base_url = http://100.103.46.96:11434/api/chat
-#base_url = http://100.103.46.96:11434/api/chat
+#base_url = http://100.121.219.121:11434/api/chat
+#model = qwen2.5:14b
 #model = qwen2.5:latest 
-model = qwen2.5:32b-instruct
+model = qwen2.5:72b-instruct
+#qwen2.5:72b-instruct
+#model = qwq:32b
+#qwen2.5:7b-instruct
+#qwq:32b
 temperature = 0.7
 top_p = 0.95
-timeout = 360
-embedding_url = http://100.103.46.96:11434/
+timeout = 1200
+#embedding_url = http://100.103.46.96:11434/
+embedding_url = http://100.121.219.121:11434/
+#embedding_url = http://localhost:11434/
 embedding_model = bge-m3:latest
+quick_model = qwen2.5:32b-instruct
